[package]
name = "coodinator"
version = "0.1.0"
edition = "2021"


[dependencies]
io = { path = "io" }
gstd = { git = "https://github.com/gear-tech/gear.git", rev = "946ac47" }
gmeta = { git = "https://github.com/gear-tech/gear.git", rev = "946ac47" }
hashbrown = "0.14"

[build-dependencies]
io = { path = "io" }
gear-wasm-builder = { git = "https://github.com/gear-tech/gear.git", rev = "946ac47" }
gmeta = { git = "https://github.com/gear-tech/gear.git", rev = "946ac47" }

[dev-dependencies]
state = { path = "state" }
gtest = { git = "https://github.com/gear-tech/gear.git", rev = "946ac47" }
gstd = { git = "https://github.com/gear-tech/gear.git", rev = "946ac47", features = ["debug"] }
tokio = "1"
gclient = { git = "https://github.com/gear-tech/gear.git", rev = "946ac47" }

[features]
# Used for inserting constants with WASM binaries (NOT paths) of the contract in
# the root crate. Usually these constants used in gclient tests instead of
# strings with paths to the binaries in the "target" directory. If you don't
# like this approach or don't use gclient tests, you can freely remove this
# feature from here and from the rest of the code.
binary-vendor = []
wasm-opt = ["gear-wasm-builder/wasm-opt"]
default = ["binary-vendor", "wasm-opt"]

# It's necessary to include all metawasm crates in the workspace section,
# otherwise they'll be ignored by Cargo and won't be built.
[workspace]
members = ["state"]