[package]
name = "io"
version = "0.1.0"
edition = "2021"

[dependencies]
gmeta = { git = "https://github.com/gear-tech/gear.git", rev = "946ac47" }
gstd = { git = "https://github.com/gear-tech/gear.git", rev = "946ac47" }
scale-info = { version = "2", default-features = false }
parity-scale-codec = { version = "3", default-features = false }
hashbrown = "0.14"