[package]
name = "state"
version = "0.1.0"
edition = "2021"

[dependencies]
gstd = { git = "https://github.com/gear-tech/gear.git", rev = "946ac47" }
gmeta = { git = "https://github.com/gear-tech/gear.git", rev = "946ac47", features = ["codegen"] }
io = { path = "../io" }

[build-dependencies]
gear-wasm-builder = { git = "https://github.com/gear-tech/gear.git", rev = "946ac47", features = ["metawasm"] }

[features]
binary-vendor = []
default = ["binary-vendor"]